[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprite/enemy/Hobrun.png" type="Texture" id=1]
[ext_resource path="res://sprite/enemy/Hobrun.gd" type="Script" id=2]
[ext_resource path="res://sounds/HurtSound.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/hobrunSound.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 18.7002

[sub_resource type="CircleShape2D" id=7]
radius = 316.0

[sub_resource type="CircleShape2D" id=8]
radius = 19.0269

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.528409 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 74.65
gravity = Vector3( -800, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 5.0
scale_curve = SubResource( 11 )
color = Color( 0.168627, 0.00392157, 0.317647, 1 )

[sub_resource type="Animation" id=12]
resource_name = "opacityBlink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HobrunArea/AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.192157 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Hobrun" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="HobrunArea" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="HobrunArea"]
rotation = -1.5708
frames = SubResource( 5 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HobrunArea"]
visible = false
shape = SubResource( 6 )

[node name="detectionRadius" type="Area2D" parent="HobrunArea"]

[node name="radiusShape" type="CollisionShape2D" parent="HobrunArea/detectionRadius"]
visible = false
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 600.0

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -1
amount = 20
lifetime = 0.5
process_material = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/opacityBlink = SubResource( 12 )
[connection signal="body_entered" from="HobrunArea" to="." method="_on_Hobrun_body_entered"]
[connection signal="body_exited" from="HobrunArea" to="." method="_on_Hobrun_body_exited"]
[connection signal="body_entered" from="HobrunArea/detectionRadius" to="." method="_on_detectionRadius_body_entered"]
